Issue #000 task: Filter collapsable

--- a/src/assets/styles/layout/_header.scss
+++ b/src/assets/styles/layout/_header.scss
@@ -148,10 +148,9 @@
 
 .sb-header {
   min-height: $base-block-space * 10;
-  padding: 0 $base-block-space * 2;
   .ui {
     &.menu {
-      padding: $base-block-space * 2 0 $base-block-space;
+      padding: $base-block-space * 2 $base-block-space;
       max-width: 1140px;
       margin: 0 auto;
       border: 0 !important;
@@ -230,4 +229,39 @@
   width: 2px;
   margin: 0 $base-block-space * 2;
   background: rgba(255, 255, 255, 0.4);
+}
+
+
+.sb-toggle-btn {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-weight: bold;
+  font-size: 12px;
+  color: $white-color;
+  margin: 0;
+  padding: 8px;
+  width: 160px;
+  cursor: pointer;
+  &:focus {
+    outline: none;
+  }
+  img {
+    transition: all 0.4s;
+  }
+
+  .sb-icon-sort {
+    height: 16px;
+    width: 16px;
+  }
+
+  .sb-icon-arrow-down {
+    height: 10px;
+    width: 10px;
+  }
+
+  &.rotate img {
+    transform: rotateX(-180deg);
+  }
+
 }
